fix: исправить ошибки согласно ревью